--- a/BCX_Wallet/module_mine/src/main/res/layout/activity_sale_nhasset.xml
+++ b/BCX_Wallet/module_mine/src/main/res/layout/activity_sale_nhasset.xml
@@ -162,7 +162,7 @@
             br:needTopBorder="false">
 
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="bottom">
 
@@ -174,8 +174,11 @@
                     android:textSize="@dimen/sp_15" />
 
                 <TextView
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="bottom"
+                    android:layout_weight="1"
+                    android:gravity="right"
                     android:paddingStart="@dimen/dp_4"
                     android:text="@={viewModel.saleValidTimeDefault}"
                     android:textColor="@color/color_A5A9B1"
