--- a/BCX_Wallet/module_mine/src/main/res/layout/dialog_sale_nhasset_confirm_layout.xml
+++ b/BCX_Wallet/module_mine/src/main/res/layout/dialog_sale_nhasset_confirm_layout.xml
@@ -53,7 +53,8 @@
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="1.2"
+                android:layout_weight="1.5"
+                android:singleLine="true"
                 android:text="@string/module_mine_sale_info"
                 android:textColor="@color/color_A5A9B1"
                 android:textSize="@dimen/sp_15" />
@@ -61,7 +62,7 @@
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="3.8"
+                android:layout_weight="3.5"
                 android:text="@string/module_mine_sale_nh_info"
                 android:textColor="@color/color_262A33"
                 android:textSize="@dimen/sp_15" />
@@ -81,7 +82,8 @@
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="1.2"
+                android:layout_weight="1.5"
+                android:singleLine="true"
                 android:text="@string/module_mine_nh_asset_sale_id"
                 android:textColor="@color/color_A5A9B1"
                 android:textSize="@dimen/sp_15" />
@@ -89,7 +91,7 @@
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="3.8"
+                android:layout_weight="3.5"
                 android:text="@={viewModel.nhAssetId}"
                 android:textColor="@color/color_262A33"
                 android:textSize="@dimen/sp_15" />
@@ -109,7 +111,7 @@
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="1.2"
+                android:layout_weight="1.5"
                 android:text="@string/module_mine_nh_asset_sale_price"
                 android:textColor="@color/color_A5A9B1"
                 android:textSize="@dimen/sp_15" />
@@ -117,7 +119,7 @@
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="3.8"
+                android:layout_weight="3.5"
                 android:text="@={viewModel.priceAmount}"
                 android:textColor="@color/color_262A33"
                 android:textSize="@dimen/sp_15" />
@@ -137,7 +139,8 @@
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="1.2"
+                android:layout_weight="1.5"
+                android:singleLine="true"
                 android:text="@string/module_mine_nh_asset_sale_valid_time"
                 android:textColor="@color/color_A5A9B1"
                 android:textSize="@dimen/sp_15" />
@@ -145,7 +148,7 @@
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="3.8"
+                android:layout_weight="3.5"
                 android:text="@={viewModel.validTime}"
                 android:textColor="@color/color_262A33"
                 android:textSize="@dimen/sp_15" />
@@ -165,7 +168,7 @@
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="1.2"
+                android:layout_weight="1.5"
                 android:text="@string/module_mine_nh_asset_sale_miner_fee"
                 android:textColor="@color/color_A5A9B1"
                 android:textSize="@dimen/sp_15" />
@@ -173,7 +176,7 @@
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="3.8"
+                android:layout_weight="3.5"
                 android:singleLine="true"
                 android:text="@={viewModel.minerFee}"
                 android:textColor="@color/color_262A33"
@@ -194,7 +197,7 @@
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="1.2"
+                android:layout_weight="1.5"
                 android:text="@string/module_mine_nh_asset_sale_memo"
                 android:textColor="@color/color_A5A9B1"
                 android:textSize="@dimen/sp_15" />
@@ -202,7 +205,7 @@
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="3.8"
+                android:layout_weight="3.5"
                 android:singleLine="true"
                 android:text="@={viewModel.orderMemo}"
                 android:textColor="@color/color_262A33"
