--- a/BCX_Wallet/module_mine/src/main/res/layout/dialog_transfer_nh_asset_confirm.xml
+++ b/BCX_Wallet/module_mine/src/main/res/layout/dialog_transfer_nh_asset_confirm.xml
@@ -53,15 +53,16 @@
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="1.2"
+                android:layout_weight="1.5"
                 android:text="@string/module_mine_sale_info"
                 android:textColor="@color/color_A5A9B1"
-                android:textSize="@dimen/sp_15" />
+                android:textSize="@dimen/sp_15"
+                android:singleLine="true"/>
 
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="3.8"
+                android:layout_weight="3.5"
                 android:text="@string/module_mine_transfer_nh_info"
                 android:textColor="@color/color_262A33"
                 android:textSize="@dimen/sp_15" />
@@ -81,7 +82,7 @@
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="1.2"
+                android:layout_weight="1.5"
                 android:text="@string/module_mine_transfer_account_name"
                 android:textColor="@color/color_A5A9B1"
                 android:textSize="@dimen/sp_15" />
@@ -89,7 +90,7 @@
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="3.8"
+                android:layout_weight="3.5"
                 android:text="@={viewModel.from}"
                 android:textColor="@color/color_262A33"
                 android:textSize="@dimen/sp_15" />
@@ -109,7 +110,7 @@
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="1.2"
+                android:layout_weight="1.5"
                 android:text="@string/module_mine_receivable_account_name"
                 android:textColor="@color/color_A5A9B1"
                 android:textSize="@dimen/sp_15" />
@@ -117,7 +118,7 @@
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="3.8"
+                android:layout_weight="3.5"
                 android:text="@={viewModel.to}"
                 android:textColor="@color/color_262A33"
                 android:textSize="@dimen/sp_15" />
@@ -137,7 +138,7 @@
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="1.2"
+                android:layout_weight="1.5"
                 android:text="@string/module_mine_nh_asset_sale_id"
                 android:textColor="@color/color_A5A9B1"
                 android:textSize="@dimen/sp_15" />
@@ -145,9 +146,10 @@
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="3.8"
+                android:layout_weight="3.5"
                 android:text="@={viewModel.nhAssetId}"
                 android:textColor="@color/color_262A33"
+                android:singleLine="true"
                 android:textSize="@dimen/sp_15" />
         </LinearLayout>
 
@@ -166,7 +168,7 @@
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="1.2"
+                android:layout_weight="1.5"
                 android:text="@string/module_mine_nh_asset_sale_miner_fee"
                 android:textColor="@color/color_A5A9B1"
                 android:textSize="@dimen/sp_15" />
@@ -174,7 +176,7 @@
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="3.8"
+                android:layout_weight="3.5"
                 android:text="@={viewModel.minerFee}"
                 android:textColor="@color/color_262A33"
                 android:textSize="@dimen/sp_15" />
