--- a/BCX_Wallet/module_asset/src/main/res/layout/dialog_cancel_order_confirm.xml
+++ b/BCX_Wallet/module_asset/src/main/res/layout/dialog_cancel_order_confirm.xml
@@ -53,15 +53,16 @@
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="1.2"
+                android:layout_weight="1.5"
                 android:text="@string/module_asset_transfer_order_info"
+                android:singleLine="true"
                 android:textColor="@color/color_A5A9B1"
                 android:textSize="@dimen/sp_15" />
 
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="3.8"
+                android:layout_weight="3.5"
                 android:text="@string/cancel_mine_nh_order_text"
                 android:textColor="@color/color_262A33"
                 android:textSize="@dimen/sp_15" />
@@ -82,7 +83,7 @@
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="1.2"
+                android:layout_weight="1.5"
                 android:text="@string/module_asset_nh_order_detail_order_id"
                 android:textColor="@color/color_A5A9B1"
                 android:textSize="@dimen/sp_15" />
@@ -90,7 +91,7 @@
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="3.8"
+                android:layout_weight="3.5"
                 android:text="@={viewModel.orderId}"
                 android:textColor="@color/color_262A33"
                 android:textSize="@dimen/sp_15" />
@@ -110,15 +111,16 @@
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="1.2"
+                android:layout_weight="1.5"
                 android:text="@string/module_asset_nh_asset_id"
                 android:textColor="@color/color_A5A9B1"
+                android:singleLine="true"
                 android:textSize="@dimen/sp_15" />
 
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="3.8"
+                android:layout_weight="3.5"
                 android:text="@={viewModel.nhAssetId}"
                 android:textColor="@color/color_262A33"
                 android:textSize="@dimen/sp_15" />
@@ -139,7 +141,7 @@
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="1.2"
+                android:layout_weight="1.5"
                 android:text="@string/module_asset_transfer_fee_info"
                 android:textColor="@color/color_A5A9B1"
                 android:textSize="@dimen/sp_15" />
@@ -147,7 +149,7 @@
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="3.8"
+                android:layout_weight="3.5"
                 android:text="@={viewModel.minerFee}"
                 android:textColor="@color/color_262A33"
                 android:textSize="@dimen/sp_15" />
