fix (cocos.js)  fix initConnect method call mode

--- a/BCX_Wallet/module_found/src/main/res/layout/fragment_found.xml
+++ b/BCX_Wallet/module_found/src/main/res/layout/fragment_found.xml
@@ -53,7 +53,7 @@
 
         </RelativeLayout>
 
-        <ScrollView
+        <android.support.v4.widget.NestedScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/white"
@@ -107,6 +107,6 @@
                     binding:layoutManager="@{LayoutManagers.linear(LinearLayoutManager.VERTICAL,Boolean.FALSE)}" />
             </LinearLayout>
 
-        </ScrollView>
+        </android.support.v4.widget.NestedScrollView>
     </LinearLayout>
 </layout>
