fix (all)  refactor  asset list

--- a/BCX_Wallet/module_asset/src/main/res/layout/module_asset_item_coin_select.xml
+++ b/BCX_Wallet/module_asset/src/main/res/layout/module_asset_item_coin_select.xml
@@ -51,7 +51,8 @@
             android:layout_centerVertical="true"
             android:layout_weight="1"
             android:gravity="right"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:visibility="@{viewModel.amountVisible}">
 
             <TextView
                 android:id="@+id/token_balance_tv"
