--- a/BCX_Wallet/library_res/src/main/res/values/colors.xml
+++ b/BCX_Wallet/library_res/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="drop_pop_menu_bg_color">#a0000000</color>
     <color name="color_F5F6FA">#F5F6FA</color>
     <color name="color_E0E0E0">#E0E0E0</color>
+    <color name="color_666666">#666666</color>
 </resources>
