--- a/BCX_Wallet/module_login/src/main/res/layout/activity_password_login.xml
+++ b/BCX_Wallet/module_login/src/main/res/layout/activity_password_login.xml
@@ -37,21 +37,28 @@
         </LinearLayout>
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center_horizontal"
-            android:orientation="vertical"
+            android:orientation="horizontal"
             android:paddingLeft="@dimen/dp_20"
-            android:paddingTop="@dimen/dp_33">
+            android:paddingTop="@dimen/dp_33"
+            android:paddingRight="@dimen/dp_20">
 
             <TextView
                 android:id="@+id/login_title"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_weight="1"
                 android:text="@string/module_login_login_title"
                 android:textColor="@color/color_262A33"
                 android:textSize="@dimen/sp_22"
                 android:typeface="@{@string/TOTAL_ASSET}" />
+
+            <com.cocos.library_base.widget.spinner.CustomSpinner
+                android:id="@+id/login_node_switch"
+                android:layout_width="74dp"
+                android:layout_height="@dimen/dp_28"
+                android:layout_gravity="right" />
 
         </LinearLayout>
 
